kustomize/dev/mentum-eks-cluster-dev/backend/api/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    # This will look for all configmaps or secrets being used either via environment variables
    # or mounts and trigger rolling upgrade if any changes made to those configmaps/secrets.  
    reloader.stakater.com/auto: "true" 
  labels:
    app.mentum.dev/name: api
    app.mentum.dev/appRevision: ""
    app.mentum.dev/namespace: mentum
    app.mentum.dev/enviroment: dev
    app.mentum.dev/tier: backend
    app.mentum.dev/resourceType: Deployment
  name: api
  namespace: mentum
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.mentum.dev/name: api
      app.mentum.dev/tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.mentum.dev/name: api
        app.mentum.dev/tier: backend
    spec:
      containers:
        - env:
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: aws_access_key_id
                  name: api-creds
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: aws_secret_access_key
                  name: api-creds
            - name: AWS_REGION
              valueFrom:
                secretKeyRef:
                  key: aws_region
                  name: api-creds
            - name: COGNITO_ENDPOINT
              valueFrom:
                secretKeyRef:
                  key: cognito_endpoint
                  name: api-creds
            - name: STRIPE_KEY
              valueFrom:
                secretKeyRef:
                  key: stripe_key
                  name: api-creds
            - name: ARN
              valueFrom:
                secretKeyRef:
                  key: arn
                  name: api-creds
            - name: DB_PROD
              valueFrom:
                secretKeyRef:
                  key: db_prod
                  name: api-creds
            - name: PROD_DB_HOST
              valueFrom:
                secretKeyRef:
                  key: prod_db_host
                  name: api-creds
            - name: PROD_DB_HOST_RO
              valueFrom:
                secretKeyRef:
                  key: prod_db_host_ro
                  name: api-creds
            - name: PROD_USERNAME
              valueFrom:
                secretKeyRef:
                  key: prod_username
                  name: api-creds
            - name: DB_PORT
              valueFrom:
                secretKeyRef:
                  key: db_port
                  name: api-creds
            - name: DEV_DB_HOST
              valueFrom:
                secretKeyRef:
                  key: dev_db_host
                  name: api-creds
            - name: DEV_USERNAME
              valueFrom:
                secretKeyRef:
                  key: dev_db_username
                  name: api-creds
            - name: DEV_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: dev_db_password
                  name: api-creds
            - name: DB_DEV
              valueFrom:
                secretKeyRef:
                  key: db_dev
                  name: api-creds
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: security_secret_key
                  name: api-creds
            - name: INTERNAL_TOKEN
              valueFrom:
                secretKeyRef:
                  key: internal_token
                  name: api-creds
            - name: SENTRY_DSN_API
              valueFrom:
                secretKeyRef:
                  key: api_dsn
                  name: sentry-creds
            - name: SKIP_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: skip.endpoint
                  name: api-configmap
            - name: UBER_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: uber.endpoint
                  name: api-configmap
            - name: BAMBORA_API_KEY
              valueFrom:
                secretKeyRef:
                  key: bambora_api_key
                  name: api-creds
            - name: DOORDASH_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: doordash.endpoint
                  name: api-configmap
            - name: GRUBHUB_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: grubhub.endpoint
                  name: api-configmap
            - name: MONEX_SECRET
              valueFrom:
                secretKeyRef:
                  key: monex_secret
                  name: api-creds
            - name: REPORT_EMAIL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: report_email_password
                  name: api-creds
            - name: MENTUM_BASE_URL
              valueFrom:
                secretKeyRef:
                  key: api_base_url
                  name: api-creds
            #- name: PAYMENT_SESSION_INITIATIVE_CONTEXT
            #  value: dev.mentumqr.com
            - name: BAMBORA_IDENTITY_CERTIFICATE_CERT_FILE_PATH
              value: /root/bambora_cert_file.pem
            - name: BAMBORA_IDENTITY_CERTIFICATE_KEY_FILE_PATH
              value: /root/bambora_cert_key.pem
            - name: ANALYTICS_QUERY_FILE_PATH
              value: /root/analytics.sql
            - name: ENV
              value: dev
            - name: QUEUE_MODE
              value: SNS
            - name: REDIS_HOST
              value: redis-master.mentum
            - name: REDIS_PORT
              value: "6379"
            - name: REDIS_MODE
              value: pool
            - name: PLATFORM
              value: k8s
            - name: REPORT_EMAIL
              value: reporting@ghostkitchenbrands.com
            - name: BAMBORA_MERCHANT_ID
              value: "384520000"
            - name: ADMIN_EMAIL_RECIPIENTS
              value: reporting@ghostkitchenbrands.com
          image: 238975939821.dkr.ecr.us-east-1.amazonaws.com/api
          imagePullPolicy: Always
          name: default
          ports:
            - containerPort: 8080
              name: grpc
              protocol: TCP
            - containerPort: 8081
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 300m
              memory: 192Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /root/bambora_cert_key.pem
              name: bambora-id-certificate-key-file
              readOnly: true
              subPath: bambora_cert_key.pem
            - mountPath: /root/bambora_cert_file.pem
              name: bambora-id-certificate-cert-file
              readOnly: true
              subPath: bambora_cert_file.pem
            - mountPath: /root/analytics.sql
              name: analytics-base-query-file
              readOnly: true
              subPath: analytics.sql
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: bambora-id-certificate-key-file
          secret:
            defaultMode: 420
            secretName: bambora-id-cert-key
        - name: bambora-id-certificate-cert-file
          secret:
            defaultMode: 420
            secretName: bambora-id-cert-file
        - configMap:
            defaultMode: 420
            name: analytics-file-configmap
          name: analytics-base-query-file
