kustomize/dev/mentum-eks-cluster-dev/backend/api/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api.dev.mentumqr.com
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public-nginx
  rules:
  - host: api-grpc.dev.mentumqr.com
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api
            port: 
              number: 80
